test name default master commit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql: true
 application.service.defaultProductService = fakeStoreProductService;
 
 author.name = therishikant
+test.name = test
