CategoryRepository related added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ScalerProject
 spring.datasource.username=randomuser
 #spring.datasource.password=toor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 
 application.service.defaultProductService = fakeStoreProductService;
-
-author.name = therishikant
-test.name = test
