--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 application.service.defaultProductService = fakeStoreProductService;
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
